--- a/static/css/pghand.css
+++ b/static/css/pghand.css
@@ -43,7 +43,7 @@
     margin-left: -25px;
     left: 50%;
     margin-top: -10px;
-    top: 50%;
+    top: 70%;
     font-size: 50px;
     cursor: pointer;
 }
